I fixed the positon of the navbar to fixed and took out the span from the .hello

--- a/L14-loading-and-displaying-3D-models-END.html
+++ b/L14-loading-and-displaying-3D-models-END.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
         <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
         <script src="https://unpkg.com/aframe-gltf-part-component/dist/aframe-gltf-part-component.min.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <div class="container">
@@ -17,7 +18,7 @@
                     <li><a href="#">CONTACT</a></li>
                 </div>
                 <div class="container-header">
-                    <span class="hello">Hello!</span>
+                    <h1 class="hello">Hello</h1>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa.</p>
@@ -39,7 +40,7 @@
                         <a-sky src="#sky"></a-sky>
                         
                         <!-- Camera -->
-                        <a-entity id="camera" position="14 6 13" rotation="-4 25 0">
+                        <a-entity id="camera" position="12 7 12" rotation="-4 40 0">
                             <a-camera></a-camera>
                         </a-entity>
                         
