--- a/L14-loading-and-displaying-3D-models-END.html
+++ b/L14-loading-and-displaying-3D-models-END.html
@@ -17,12 +17,20 @@
                     <li><a class = "yellow" href="#">PROJECTS</a></li>
                     <li><a class = "yellow" href="#">CONTACT</a></li>
                 </div>
-                <div class="container-header">
+                <div class="title-1">
                     <h1 class="hello">Hello</h1>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, aliquip ex ea commodo consequa.</p>
+               <div class="white-icons">
+                    <div class="icons">
+                        <img src="L14-ASSETs/icons/blue-area-icons.png" alt="">
+                    </div>
+                </div>  
             </div>
+
+            <!--  A - Frame -->
+            
             <div id="my-scene">
                 <a-scene embedded> 
                     <!-- Asset Management System -->
@@ -74,19 +82,60 @@
             </div>
         </div>
         
-        <div class="container-2">
-            <div class="side-1">
+        <!-- projects area -->
+
+        <div class="projects-pane"> 
+            <div class="sides">
+                <div class="project-des">
+                    <div class="project-title">
+                        <h1>MY<br>WORK</h1>
+                    </div>
+                    <div class="project-info">
+                        <p>Places of worship can be abandoned for many different reasons.
+                                "Itge of faith and conquest, running out of money, and, of course, earthquakes and natural disasters," says Joffe. "I was struck by how many churches were submerged in water, for instance."
+                                One of the most photographs in Joffe's book shows a 14th century Romanesque church spige and their.</p>
+                    </div>
+                </div>
+                <div class="project-img">
+                    <div class="project-title-2"></div>
+                    <div class="image">
+                        <img src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+           <!-- title -->
+            <!-- <div class="side-1">
                 <div class="title">
                     <h1>MY<BR>WORK</h1>
                 </div>
+            </div> -->
+            <!-- text -->
+            <!-- <div class="side-2">
+                <div class="text">
+                    <p>Places of worship can be abandoned for many different reasons.
+                        "Itge of faith and conquest, running out of money, and, of course, earthquakes and natural disasters," says Joffe. "I was struck by how many churches were submerged in water, for instance."
+                        One of the most extraordinary photographs in Joffe's book shows a 14th century Romanesque church spige and their beloved church," says Joffe.</p>
+                </div>
+                <div class="container-3"> -->
+                        <!-- button-->   
+                    <!-- <div class="arrow-btn">
+                        <input class="arrow-btn" type="image" id="image" onclick="change();"
+                        src="L14-ASSETs/icons/arrow-btn.svg">
+                    </div>
+                    <div class="container-4">
+                    <div class="image">
+                        <img id ="change-img" src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
+                        <div class="project-name">
+                                <p><strong>ELDERLY SKILL SHARE</strong></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="side-2">
-            <div class="text">
-                <p>Places of worship can be abandoned for many different reasons.
-                    "Itge of faith and conquest, running out of money, and, of course, earthquakes and natural disasters," says Joffe. "I was struck by how many churches were submerged in water, for instance."
-                    One of the most extraordinary photographs in Joffe's book shows a 14th century Romanesque church spige and their beloved church," says Joffe.</p>
-            </div>
-        </div>
-    </div>   
+            </div> -->
+            <!-- image & btn-->
     </body>
 </html>
