--- a/L14-loading-and-displaying-3D-models-END.html
+++ b/L14-loading-and-displaying-3D-models-END.html
@@ -99,12 +99,12 @@
                 </div>
                 <div class="project-img">
                     <div class="icon">
-                            <img src="L14-ASSETs/icons/matri.svg">
+                        <img src="L14-ASSETs/icons/matri.svg">
                     </div>
                     <div class="project-title-2"></div>
                     <div class="image-sec">
                         <div class="img-1">
-                            <img id="change-img" src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
+                            <img class="change-img" src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
                             <div class="img-des">
                                 <p class = "project-name">ELDERLY SKILL SHARE</p>
                                 <p class = "made-with">CSS / HTML / JS / RUBY ON RAILS</p>
@@ -121,5 +121,38 @@
             </div>
         </div>
         </div>
+
+
+
+           <!-- title -->
+            <!-- <div class="side-1">
+                <div class="title">
+                    <h1>MY<BR>WORK</h1>
+                </div>
+            </div> -->
+            <!-- text -->
+            <!-- <div class="side-2">
+                <div class="text">
+                    <p>Places of worship can be abandoned for many different reasons.
+                        "Itge of faith and conquest, running out of money, and, of course, earthquakes and natural disasters," says Joffe. "I was struck by how many churches were submerged in water, for instance."
+                        One of the most extraordinary photographs in Joffe's book shows a 14th century Romanesque church spige and their beloved church," says Joffe.</p>
+                </div>
+                <div class="container-3"> -->
+                        <!-- button-->   
+                    <!-- <div class="arrow-btn">
+                        <input class="arrow-btn" type="image" id="image" onclick="change();"
+                        src="L14-ASSETs/icons/arrow-btn.svg">
+                    </div>
+                    <div class="container-4">
+                    <div class="image">
+                        <img id ="change-img" src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
+                        <div class="project-name">
+                                <p><strong>ELDERLY SKILL SHARE</strong></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div> -->
+            <!-- image & btn-->
     </body>
 </html>
