--- a/L14-loading-and-displaying-3D-models-END.html
+++ b/L14-loading-and-displaying-3D-models-END.html
@@ -97,25 +97,15 @@
                                 One of the most photographs in Joffe's book shows a 14th century Romanesque church spige and their.</p>
                     </div>
                 </div>
-                <div class="project-img">
-                    <div class="icon">
-                        <img src="L14-ASSETs/icons/matri.svg">
-                    </div>
-                    <div class="project-title-2"></div>
-                    <div class="image-sec">
-                        <div class="img-1">
-                            <img class="change-img" src="L14-ASSETs/cards/elder.png" alt="elderly skill share">
-                            <div class="img-des">
-                                <p class = "project-name">ELDERLY SKILL SHARE</p>
-                                <p class = "made-with">CSS / HTML / JS / RUBY ON RAILS</p>
-                            </div>
+                <div class="image-side">
+                    <div class="top-1"></div>
+                    <div class="middle">
+                            <a class="image-preview">
+                                <div class="image-preview__img"></div>
+                                <h2 class="image-preview__title">Gradient Hover Effect</h2>
+                            </a>
                         </div>
-                        <div class="arrow-btn-container">
-                            <div class="arrow-btn">
-                                <input class="arrow-btn" type="image" id="image" onclick="change();"
-                                src="L14-ASSETs/icons/arrow-btn.svg">
-                            </div>
-                        </div>
+                        <div class="bottom"></div>
                     </div>
                 </div>
             </div>
