work on the layout

--- a/L14-loading-and-displaying-3D-models-END.html
+++ b/L14-loading-and-displaying-3D-models-END.html
@@ -98,21 +98,36 @@
                     </div>
                 </div>
                 <div class="image-side">
-                    <div class="top-1"></div>
                     <div class="middle">
-                            <a class="image-preview">
-                                <div class="image-preview__img"></div>
-                                <h2 class="image-preview__title">Gradient Hover Effect</h2>
-                            </a>
+                            <div class="icon">
+                                 <img src="L14-ASSETs/icons/matri.svg" alt="">
+                            </div>
+                            <div class="image-btn">
+                                <a class="image-preview">
+                                    <div class="image-preview__img"></div>
+                                    <h2 class="image-preview__title">lets go!</h2>
+                                </a>
+                                <div class="arrow-btn">
+                                        <input class="arrow-btn" type="image" id="image" onclick="change();"
+                                        src="L14-ASSETs/icons/arrow-btn.svg">
+                                </div>
+                            </div>
+                                <div class="img-dec">
+                                    <p class="project-name">elderly share a skill</p>
+                                    <p class="project-tech">css / html / js / ruby on rails</p>
+                                </div>
                         </div>
-                        <div class="bottom"></div>
+                        <!-- <div class="bottom">
+                            <div class="img-des">
+                                <p class="project-name">elderly share a skill</p>
+                                <p class="project-tech">css / html / js / ruby on rails</p>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
         </div>
-
-
 
            <!-- title -->
             <!-- <div class="side-1">
