--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>L14 - Loading and displaying 3D models</title>
+        <title>Rony H.</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
         <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
