--- a/project.html
+++ b/project.html
@@ -100,7 +100,7 @@
             <div class="bottom">
                 <div class="tech-link">
                     <p class="made-with">CSS / HTML / JS / RUBY ON RAILS / FIGMA</p>
-                    <a class="web-link" href="#">VISIT ELDER SHARE A SKILL</a>
+                    <a class="web-link" href="#" target="_blank">VISIT ELDER SHARE A SKILL</a>
                 </div>
                 <div class="next-project">
                     <img  src="assets/icons/blue_arrow.png" alt="" onclick="swapProject(currentIndex - 1)">
