modified some css for the mobile version

--- a/index.html
+++ b/index.html
@@ -182,10 +182,11 @@
                 </a-scene> 
 
             <div id="splash">
-              <div class="loading"></div>
+              <div class="loader"></div>
             </div>
 
             </div>
         </div>
     </body>
 </html>
+
