--- a/project.html
+++ b/project.html
@@ -25,6 +25,7 @@
 
     <div class="all-carousells">
         <!-- elder -->
+        <div class="carousel-wrapper">
         <div class="carousel active" data-flickity='{ "pageDots": false, "fullscreen": true, "lazyLoad": 1, "arrowShape": "M30.49,50a.31.31,0,0,1,.1-.24l41-41L62.93,0l-41,41a12.67,12.67,0,0,0,0,17.88l41,41,8.7-8.7-41-41A.31.31,0,0,1,30.49,50Z"}'>
                 <div class="carousel-cell">
                     <img class="carousel-cell-image"
@@ -43,48 +44,7 @@
                     data-flickity-lazyload="assets/cards/elders/4.png" />
                 </div>
             </div>
-
-            <!-- finals -->
-            <!-- <div class="carousel" data-flickity='{ "pageDots": false, "fullscreen": true, "lazyLoad": 1, "arrowShape": "M30.49,50a.31.31,0,0,1,.1-.24l41-41L62.93,0l-41,41a12.67,12.67,0,0,0,0,17.88l41,41,8.7-8.7-41-41A.31.31,0,0,1,30.49,50Z"}'>
-                <div class="carousel-cell">
-                    <img class="carousel-cell-image"
-                    data-flickity-lazyload="assets/cards/finals/1.png" />
-                </div>
-                <div class="carousel-cell">
-                    <img class="carousel-cell-image"
-                    data-flickity-lazyload= "assets/cards/finals/2.png" />
-                </div>
-                <div class="carousel-cell">
-                    <img class="carousel-cell-image"
-                    data-flickity-lazyload="assets/cards/finals/3.png" />
-                </div>
-                <div class="carousel-cell">
-                    <img class="carousel-cell-image"
-                    data-flickity-lazyload="assets/cards/finals/4.png" />
-                </div>
-            </div> -->
-
-            <!-- finals-copy -->
-            <!-- <div class="carousel " data-flickity='{ "pageDots": false, "fullscreen": true, "lazyLoad": 1,"arrowShape": "M30.49,50a.31.31,0,0,1,.1-.24l41-41L62.93,0l-41,41a12.67,12.67,0,0,0,0,17.88l41,41,8.7-8.7-41-41A.31.31,0,0,1,30.49,50Z" }'>
-                    <div class="carousel-cell">
-                        <img class="carousel-cell-image"
-                        data-flickity-lazyload="assets/cards/finals/1.png" />
-                    </div>
-            </div> -->
-              <!-- finals-copy -->
-              <!-- <div class="carousel " data-flickity='{ "pageDots": false, "fullscreen": true, "lazyLoad": 1,"arrowShape": "M30.49,50a.31.31,0,0,1,.1-.24l41-41L62.93,0l-41,41a12.67,12.67,0,0,0,0,17.88l41,41,8.7-8.7-41-41A.31.31,0,0,1,30.49,50Z" }'>
-                    <div class="carousel-cell">
-                        <img class="carousel-cell-image"
-                        data-flickity-lazyload="assets/cards/finals/1.png" />
-                    </div>
-            </div> -->
-                <!-- finals-copy -->
-            <!-- <div class="carousel " data-flickity='{ "pageDots": false, "fullscreen": true, "lazyLoad": 1,"arrowShape": "M30.49,50a.31.31,0,0,1,.1-.24l41-41L62.93,0l-41,41a12.67,12.67,0,0,0,0,17.88l41,41,8.7-8.7-41-41A.31.31,0,0,1,30.49,50Z" }'>
-                        <div class="carousel-cell">
-                            <img class="carousel-cell-image"
-                            data-flickity-lazyload="assets/cards/finals/1.png" />
-                        </div>
-                </div> -->
+        </div>
     </div>
 
           
