--- a/project.html
+++ b/project.html
@@ -15,6 +15,10 @@
     <!-- navbar -->
     <div class="container-1">
         <li><a class = "yellow" href="/" onclick="cameraLocation({x: 12, y:6, z:13}, {x: 1.8, y: 40, z: 0});">HOME</a></li>
+        <li><a class = "yellow" href="#" onclick="showContact();" >CONTACT</a></li>
+        <div class="contact">
+            <p class="contacts">ronyh8@gmail.com / 0543003676</p>
+        </div>
     </div>
     <!-- title -->
     <div class="title-wrapper">
